--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -124,6 +124,7 @@ i{
 .hero-h1{
 	font-size: 70px;
     text-shadow: -1px -1px 0 #888888;
+    margin-bottom: -12px
 }
 
 .hr{
